# cv-ai-pipeline-case-study

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
api/domain/software_engineering/: analysis_explainer.py  analysis_outputs.py
api/domain/software_engineering/improvements_recommendation/: improvements_recommender.py
api/domain/software_engineering/salary_estimation/: salary_estimator.py
api/domain/software_engineering/seniority_scoring/: seniority_scorer.py
api/domain/software_engineering/structure_extraction/: structured_extractractor.py
api/domain/software_engineering/structure_extraction/models/: models.py
api/routers/: cv.py  health.py
api/temporal/: __init__.py  activities.py  worker.py  workflows.py
api/temporal/extractors/: base_extractor.py  pdf_extractor.py
api/tests/: test_health.py
api/tests/domain/software_engineering/: test_heuristic_generators.py
api/utils/ai_client/: client.py
database/: __init__.py  database.py  init.sql  pyproject.toml
database/models/: __init__.py  artifact_type.py  cv_execution.py  cv_execution_artifact.py  cv_record.py  execution_state.py
file-server/: Dockerfile  main.py  pyproject.toml  requirements.txt
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json
frontend/src/: App.css  App.tsx  config.ts  index.css
frontend/src/components/: DeleteConfirmationModal.tsx  UploadModal.tsx
frontend/src/pages/: DetailPage.tsx  ExecutionDetailPage.tsx  MainPage.tsx
observability/: grafana-datasource.yaml  loki-config.yaml  promtail-config.yaml
shared/: logging_utils.py  pyproject.toml
shared/file_server_client/: __init__.py  file_server_client.py  file_server_error.py  file_upload_response.py  not_found_error.py
