[project]
name = "cv-ai-database"
version = "0.1.0"
description = "Database models and session management for the CV AI Pipeline"
requires-python = ">=3.12"
dependencies = [
    "asyncpg==0.30.*",
    "sqlalchemy[asyncio]==2.0.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["database"]
