[project]
name = "cv-ai-file-server"
version = "0.1.0"
description = "File storage service for the CV AI Pipeline"
requires-python = ">=3.12"
dependencies = [
    "cv-ai-shared",
    "fastapi==0.115.*",
    "python-multipart==0.0.*",
    "uvicorn[standard]==0.34.*",
]

[tool.uv]
package = false

[tool.uv.sources]
cv-ai-shared = { workspace = true }
