[project]
name = "cv-ai-shared"
version = "0.1.0"
description = "Shared utilities and clients for the CV AI Pipeline"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.*",
    "structlog==24.4.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]
